# SnowFlake

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  x86_64-linux_env.sh
arch/x86_64/: elf.rs  linker.ld
arch/x86_64/boot2snow/: Cargo.toml  Makefile  x86_64-boot2snow.json
arch/x86_64/boot2snow/src/: boot2snow.rs  conf.rs  display.rs  fs.rs  io.rs  lib.rs  null.rs  panic.rs  rt.rs  string.rs  text.rs  vars.rs
arch/x86_64/boot2snow/src/image/: bmp.rs  mod.rs
arch/x86_64/init/: Makefile  start.asm
boot2snow/: Cargo.toml  Makefile  rust-toolchain  x86_64-boot2snow.json
boot2snow/src/: boot2snow.rs  conf.rs  display.rs  fs.rs  io.rs  lib.rs  macros.rs  memory_map.rs  paging.rs  panic.rs  string.rs
boot2snow/src/image/: bmp.rs  mod.rs
boot2snow/uefi_alloc/: Cargo.toml  rust-toolchain
boot2snow/uefi_alloc/src/: lib.rs
kernel/: Cargo.toml  Makefile  x86_64-snowflake.json
kernel/arch/x86_64/: apic.rs  gdt.rs  idt.rs  interrupts.rs  irq.rs  keyboard.rs  linker.ld  mod.rs  pic.rs  serial.rs
kernel/arch/x86_64/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
kernel/src/: console.rs  consts.rs  display.rs  entry.s  exec.rs  fs.rs  irq.rs  kmain.rs  lib.rs  macros.rs  panic.rs  rt.rs  shell.rs  snowkernel.rs  string.rs  testui.rs  vars.rs  vga_buffer.rs
kernel/src/image/: bmp.rs  mod.rs
kernel/src/include/libc/: string.h
kernel/src/memory/: bump.rs  mod.rs  recycle.rs
res/: boot2snow.conf
res/ui_front/: app-drawer.html  desktop-settings.html  desktop.html  login.html
res/ui_front/css/: background.css  context_menu.css  fixed_status_bar.css  login.css
res/ui_front/js/: clock.js  context_menu.js
share/: color.rs  elf.rs  uefi_proto.rs
share/libuefi/src/: con.rs
share/libuefi/src/boot_services/protocols/: file.rs  graphics_output.rs  mod.rs
share/uefi/src/boot_services/: mod.rs
src/: lib.rs  vbe.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  entry.asm  linker.ld  loader.asm
src/arch/x86_64/boot/: Makefile  boot.asm  fat.inc  linker.ld  loader.asm
src/arch/x86_64/boot/include/: globals.inc
src/arch/x86_64/boot/include/console/: tty.h
src/arch/x86_64/boot/include/libc/: stddef.h  stdio.h  string.h
src/arch/x86_64/boot/include/stage2/: console.hpp  disks.hpp  ealy_memory.hpp  io.hpp  serial.hpp
src/arch/x86_64/boot/libc/stdio/: printf.c
src/arch/x86_64/boot/libc/string/: atoi.c  isspace.c  itoa.c  strcpy.c
src/arch/x86_64/boot/stage1/: bootsector.asm
src/arch/x86_64/boot/stage2/: console.cpp  descriptor.inc  disks.cpp  loader.asm  longmode.cpp
src/arch/x86_64/boot2snow/: Makefile  linker.ld
src/arch/x86_64/boot2snow/include/console/: vga.h
src/arch/x86_64/boot2snow/include/libc/: stddef.h  string.h
src/arch/x86_64/boot2snow/include/stage2/: console.hpp  disks.hpp  fat32_specs.hpp  io.hpp  longmode.hpp
src/arch/x86_64/boot2snow/include/stl/: types.hpp
src/arch/x86_64/boot2snow/libc/stdio/: putchar.c  tty.c
src/arch/x86_64/boot2snow/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strncpy.c
src/arch/x86_64/boot2snow/stage1/: stage1.asm
src/arch/x86_64/boot2snow/stage2/: console.cpp  disks.cpp  loader.asm  s2main.cpp  s2main.cr
src/arch/x86_64/boot2snow/stage2/lib/: disks.cr  fat32.cr  longmode.cr  serial.cr  terminal.cr
src/arch/x86_64/boot2snow/stage2/runtime/src/: prelude.cr
src/arch/x86_64/boot2snow/stage2/runtime/src/lib/: libk.cr  std.cr
src/arch/x86_64/boot2snow/stage2/runtime/src/lib/libk/: glue.cr  heap.cr
src/arch/x86_64/boot2snow/stage2/runtime/src/lib/std/: char.cr  gc.cr  int.cr  object.cr  pointer.cr  raise.cr  s2term.cr  static_array.cr
src/arch/x86_64/boot2snow/stage2/runtime/src/lib/std/gc/: minimal.cr
src/include/libc/: stddef.h  string.h
src/include/libc/sys/: cdefs.h
src/libc/string/: memchr.c  memzero.c  strlen.c
