[package]
name = "Boot2Snow"
version = "0.1.0-Hydrogen"
authors = ["xuserwhat <quicknshell@gmail.com>"]

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem"]

[dependencies]
uefi = {git = "https://github.com/SnowFlakeOS/uefi", rev = "ad7346f"}
uefi_alloc = {git = "https://github.com/SnowFlakeOS/uefi_alloc", rev = "9e75de6"}
rlibc = "1.0"
utf16_literal = "0.1.0"
bitflags = "1"
x86_64 = "0.1.2"

[lib]
name = "Boot2Snow"
crate-type = ["staticlib"]