[package]
name = "Boot2Snow"
version = "0.1.0-Hydrogen"
authors = ["xuserwhat <quicknshell@gmail.com>"]

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem"]

[dependencies]
uefi = {git = "https://github.com/SnowFlakeOS/uefi"}
rlibc = "1.0"
bitflags = "1"
x86_64 = "0.1.2"
uefi_alloc = { git = "https://github.com/SnowFlakeOS/uefi_alloc" }
orbclient = { git = "https://github.com/redox-os/orbclient.git", branch = "no_std" }

[lib]
name = "Boot2Snow"
crate-type = ["staticlib"]