[package]
name = "SnowKernel"
version = "0.1.0"
authors = ["xuserwhat <quicknshell@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem"]

[dependencies]
uefi_alloc = { git = "https://github.com/redox-os/uefi_alloc.git" }
uefi = { git = "https://github.com/SnowFlakeOS/uefi.git" }
orbclient = { git = "https://github.com/redox-os/orbclient.git", branch = "no_std" }
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
