[package]
name = "SnowKernel"
version = "0.1.0-Hydrogen"
authors = ["xuserwhat <quicknshell@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
x86_64 = "0.1.2"
bitflags = "1"
once = "0.3.3"
slab_allocator = { git = "https://github.com/redox-os/slab_allocator.git", rev = "0a53a0b" }